HTTP 완벽 가이드 - 헤더와 상태코드

--- a/HTTP 완벽 가이드/헤더와 상태코드.md
+++ b/HTTP 완벽 가이드/헤더와 상태코드.md
@@ -1,3 +1,39 @@
+## 헤더
+
+### 일반 헤더
+
+클라이언트와 서버 양쪽 모두가 사용한다. 이들은 클라이언트, 서버, 다른 애플리케이션들을 위해 다양한 목적으로 사용된다.
+
+
+
+### 요청 헤더
+
+요청 메시지를 위한 헤더다. 서버에게 클라이언트가 받고자 하는 데이터의 타입이 무엇인지와 같은 부가 정보를 제공한다.
+
+
+
+### 응답 헤더
+
+클라이언트에게 정보를 제공하기 위한 응답 메시지의 헤더이다.
+
+
+
+### 엔터티 헤더
+
+엔터티 본문에 대한 헤더를 말한다. 엔터티 본문에 대한 추가 정보를 제공한다.
+
+
+
+### 확장 헤더
+
+애플리케이션 개발자들에 의해 만들어진 HTTP 비표준 헤더다.
+
+
+
+---
+
+
+
 ## 상태 코드
 
 ### 100-199 : 정보성 상태코드
