--- a/RealMySQL/10. 트랜잭션과 잠금.md
+++ b/RealMySQL/10. 트랜잭션과 잠금.md
@@ -117,3 +117,33 @@ mysql> UPDATE employees SET hire_date=NOW()
 레코드 기반의 바이너리 로그를 사용하거나 바이너리 로그를 사용하지 않는 경우 InnoDB의 갭 락이나 넥스트 키 락의 사용을 대폭 줄일 수 있다. 이렇게 하면 위 예제의 경우 처음 인덱스 검색 시 253건의 데이터에 대해 잠금을 걸지만, 나머지 조건을 비교해서 일치하지 않는 레코드는 잠금을 해제한다.
 
 ---
+
+## MySQL의 격리 수준
+
+트랜잭션 격리 수준이란 동시에 여러 트랜잭션이 처리 될 때 특정 트랜잭션이 다른 트랜잭션에서 변경하거나 조회하고 있는 데이터를 볼 수 있도록 허용할지 말지를 결정하는 것이다.
+
+격리 수준이 높아질수록 MySQL의 처리 성능이 많이 떨어질 것으로 생각하는 개발자가 많은데, 사실 SERIALIZABLE 격리 수준이 아니라면 크게 성능의 개선이나 저하는 발생하지 않는다.
+
+### READ UNCOMMITTED
+
+각 트랜잭션에서 변경 내용이 COMMIT이나 ROLLBACK 여부에 상관 없이 다른 트랜잭션에서 보여진다.
+
+어떤 트랜잭션에서 처리한 작업이 완료(COMMIT) 되지 않았는데도 다른 트랜잭션에서 볼 수 있게 되는 현상을 DIRTY READ라 한다. RDBMS 표준에서는 트랜잭션 격리 수준으로 인정하지 않을 정도로 정합성에 문제가 많은 격리 수준이다.
+
+### READ COMMITTED
+
+오라클 DBMS에서 기본적으로 사용되고 있는 격리 수준. 온라인에서 가장 많이 사용되고 있는 격리 수준이다. COMMIT이 완료된 데이터만 다른 트랜잭션에서 조회할 수 있기 때문에 DIRTY READ는 발생하지 않는다. 일반적으로 COMMIT 이전에는 백업 된 데이터인 언두 영역을 읽어오게 됨으로써 가능하다.
+
+여기서는 NON-REPEATABLE READ 문제가 발생하는데, 이는 (조회하는 입장에서) 한 트랜잭션 안에서 다른 결과가 조회될 수 있음을 의미한다.
+
+### REPETABLE READ
+
+MySQL의 InnoDB 스토리지 엔진에서 기본적으로 사용되는 격리 수준. 바이너리 로그를 가진 MySQL의 장비에서는 최소 REPEATABLE READ 격리 수준 이상을 사용해야 한다. 언두 영역에 백업된 이전 데이터를 이용해 동일 트랜잭션 내에서는 동일한 결과를 보여줄 수 있도록 보장한다. SELECT 하는 입장에서 자신의 트랜잭션 번호보다 앞선 트랜잭션 번호에서 변경한 것들만 보게 되는 것이다.
+
+REPEATABLE READ에서는 PHANTOM READ가 발생하는데, 조회하는 측에서 SELECT ...FOR UPDATE 쿼리를 실행하면 한 트랜잭션 안에서 레코드의 추가 혹은 변경 내역이 보였다가 사라지는 현상이 생기는 현상을 말한다. SELECT ...FOR UPDATE 쿼리는 SELECT 하는 레코드에 쓰기 잠금을 걸어야 하는데, 언두 레코드에는 잠금을 걸 수 없기 때문에 언두 영역의 변경 전 데이터를 가지고 오는 것이 아니라 현재 레코드의 값을 가져오게 된다. 이 과정에서 PHANTOM READ가 발생하게 된다.
+
+### SERIALIZABLE
+
+트랜잭션 격리 수준이 SERIALIZABLE로 설정되면 읽기 작업도 공유 잠금(읽기 잠금)을 획득해야 한다. 따라서 동시에 다른 트랜잭션은 그 레코드를 변경하지 못하게 된다. 즉, 한 트랜잭션에서 읽고 쓰는 레코드를 다른 트랜잭션에서는 절대 접근할 수 없는 것이다.
+
+InnoDB 스토리지 엔진에서는 REPEATABLE READ 격리 수준에서도 이미 PHANTOM READ가 발생하지 않기 때문에, 굳이 SERIALIZABLE을 사용 할 필요성은 없다.
