시스코 네트워킹 - 스패닝 트리 (2)

--- a/시스코 네트워킹/스패닝 트리.md
+++ b/시스코 네트워킹/스패닝 트리.md
@@ -50,3 +50,46 @@
 **루트 포트, 데지그네이티드 포트로 선정되지 못한 포트는 모두 막아버린다.**
 
 ---
+
+## 스패닝 트리 프로토콜의 5가지 상태 변화
+
+스패닝 트리 프로토콜을 구현해 나가는 과정에서 모든 스위치나 브리지의 포트들은 언제나 다음의 5가지의 상태로 변한다.
+
+- Diabled : 포트가 고장나서 사용할 수 없거나 네트워크 관리자가 포트를 일부러 Shut Down 시켜 놓은 상태
+
+  - 데이터 전송 불가
+  - 맥 어드레스 Learning off
+  - BPDU 송신 / 수신 불가
+
+- Blocking : 스위치를 맨 처음 켜거나 Disabled 되어 있는 포트를 관리자가 다시 살린 상태. 오직 BPDU만 주고 받을 수 있다.
+  - 데이터 전송 불가
+  - 맥 어드레스 Learning off
+  - BPDU 송신 / 수신 가능
+- Listening : Blocking 상태에 있던 스위치 포트가 루트 포트나 데지그네이티드 포트로 선정 될 경우, 포트는 바로 Listening 상태가 된다. (다시 Non Designated 포트로 변할 경우 Blocking 상태로 돌아간다.)
+  - 데이터 전송 불가
+  - 맥 어드레스 Learning off
+  - BPDU 송신 / 수신 가능
+- Learning : 리스닝 상태에 있던 스위치 포트가 포워딩 딜레이 디폴트 시간 15초 동안 그 상태를 유지할 때, Listening 상태가 Learning 상태로 변한다. 이제 맥 어드레스를 배워 맥 어드레스 테이블을 만들 수 있다.
+  - 데이터 전송 불가
+  - 맥 어드레스 Learning on
+  - BPDU 송신 / 수신 가능
+- Forwarding : 스위치 포트가 Learning 상태에서 다른 상태로 넘어가지 않고 다시 포워딩 딜레이 디폴트 시간 15초 동안 그 상태를 유지하면 Learning 상태가 Fowarding 상태가 된다. 이 상태에서 스위치 포트는 데이터 프레임을 주고 받을 수 있다.
+  - 데이터 전송 가능
+  - 맥 어드레스 Learning on
+  - BPDU 송신 / 수신 가능
+
+---
+
+## 스패닝 트리의 재편성
+
+Non Root Bridge들이 지정된 시간 동안 패킷을 받지 못하면 중간 경로에 문제가 생겼다고 판단한 뒤 스패닝 트리를 재편성하게 된다.
+
+- Hello Time : 루트 브리지가 얼마 만에 한 번씩 헬로 BPDU를 보내는지에 대한 시간이다. 디폴트 헬로타임은 2초
+- Max Age : 브리지들이 루트 브리지로부터 헬로 패킷을 받지 못하면 맥스 에이지 시간 동안 기다린 후 스패닝 트리 구조 변경을 시작한다. 루트 브리지로부터 얼마동안 패킷을 받지 못했을 때 루트 브리지가 죽었다 생각하고 새로운 스패닝 트리를 만들기 시작하는가에 대한 시간
+- Forwarding Delay : 브리지 포트가 블로킹 상태에서 포워딩 상태로 넘어갈 때까지 걸리는 시간. 블로킹에서 포워딩으로 넘어가는데에 걸리는 시간은 포워딩 딜레이 시간의 두 배가 된다.
+
+### 재편성 절차
+
+1. Max Age 동안 패킷을 받지 못하면 스패닝 트리의 변경을 시작한다.
+2. 기존의 데지그네이티드 포트를 포워딩에서 블로킹 상태로 변경한다
+3. 루트 포트를 다른쪽 포트로 변경한다. (블로킹 → 포워딩) 소요시간은 디폴트 포워딩 딜레이 타임의 2배다.
