--- a/시스코 네트워킹/라우터.md
+++ b/시스코 네트워킹/라우터.md
@@ -77,3 +77,82 @@
 ### 외부용 프로토콜(Exterior Routing Protocol)
 
 AS 외부에서 서로 라우팅 정보를 주고받기 위해 라우터가 사용하는 프로토콜, 또는 EGP(Exterior Gateway Protocol)이라고 한다.
+
+---
+
+## 디스턴스 벡터와 링크 스테이트
+
+라우팅 테이블을 어떻게 관리 하는가에 따른 분류
+
+### 디스턴스 벡터 알고리즘
+
+디스턴스와 벡터만을 위주로 만들어진 알고리즘. 목적지까지의 모든 경로를 자신의 라우팅 테이블 안에 저장하는 것이 아니라 목적지까지의 거리와 그 목적지까지 가려면 어떤 인접 라우터를 거쳐야 하는가에 대한 방향만을 저장한다. 인접 라우터들과 주기적으로 라우팅 테이블을 교환해서 자신의 정보에 변화가 생기지 않았는지를 확인하고 관리한다.
+
+이러한 디스턴스 벡터 알고리즘은 한 라우터가 모든 라우팅 정보를 가지고 있을 필요가 없기 때문에 라우팅 테이블을 줄일 수 있어 메모리를 절약할 수 있고, 구성 자체도 간단하며 여러 곳에서 표준으로 사용되고 있다는 장점이 있다.
+
+그러나 주기적으로 라우팅 테이블의 업데이트가 일어나기 때문에 트래픽 낭비가 생기고, 테이블에 변화가 생길 경우 이 변화를 모든 라우터가 알 때까지 걸리는 시간이 너무 느리다는 단점이 있다. RIP의 경우는 최대 홉 카운트가 15를 넘지 못하기 때문에 라우터 15개를 넘어서 있는 네트워크는 인식하지 못한다.
+
+### 링크 스테이트 알고리즘
+
+한 라우터가 목적지까지의 모든 경로 정보를 다 알고 있는 알고리즘. 링크에 대한 정보(어디에 어떤 네트워크가 위치하는지, 거기까지 가려면 어떤 라우터를 통해야 하는지의 정보)를 토폴러지 데이터베이스로 만든다. 동작 순서는 다음과 같다.
+
+1. 링크에 대한 정보로 토폴러지 데이터베이스를 만든다.
+2. 만들어진 토폴러지 데이터베이스를 가지고 라우터는 SPF라는 알고리즘을 계산한다.
+3. 계산 결과를 가지고 SPF 트리를 만든다.
+4. 트리 정보를 가지고 라우팅 테이블을 만든다.
+
+   한 라우터에서 목적지까지의 모든 정보를 알고 있기 때문에 중간에 변화가 생겨도 이를 알아내는 데 걸리는 시간이 짧다. 또한 라우팅 테이블의 교환이 자주 발생하지 않고, 일어나는 경우에도 테이블에 변화가 있는 것만을 교환하기 때문에 트래픽 발생을 줄여줄 수 있다.
+
+   그러나 모든 라우팅 정보를 관리해야 하기에 메모리를 많이 소모하고, SPF 계산 등 여러가지 계산을 해야 하기 때문에 CPU가 일을 많이 하게 된다.
+
+---
+
+## 라우터의 몇 가지 모드
+
+### RXBOOT 모드
+
+ROMMON 모드 라고도 하는데, 복구용 모드. 라우터의 패스워드를 모르는 경우나 라우터의 이미지 파일(IOS)에 문제가 생긴 경우 복구를 위해 사용한다.
+
+### 셋업 모드
+
+라우터를 처음 구매해서 파워를 켰거나 라우터에 구성 파일이 없는 경우 라우터가 부팅하면서 자동으로 들어가는 모드. 라우터에 대한 질문에 답을 하면서 구성 파일을 만들게 된다.
+
+### 유저 모드
+
+테스트, 현재 상태를 볼 수 있다. 그러나 라우터의 구성 파일을 본다거나 구성 자체를 변경할 수는 없다.
+
+### 프리빌리지드 모드
+
+유저 모드에서 enable을 사용해서 들어가며, 모든 라우터의 명령이 가능해진다. 구성을 볼 수 있고 변경도 할 수 있다. 명령의 제약이 없는 모드이다.
+
+### 구성 모드
+
+구성 파일을 변경하는 경우에 사용하는 모드. Config 모드라고도 한다. 이 모드로 진입하기 위해서는 프리블리지드 모드 상태여야 한다.
+
+---
+
+## 라우터의 내부 구성
+
+### 램(RAM)
+
+우선 라우터를 운용하는 운용 시스템이 올라간다. 시스코의 라우터의 경우 IOS(Internetwork Operating System)를 사용한다.
+
+또한 라우팅 테이블이 올라간다. 라우팅 테이블은 라우터가 어떤 용도인지, 어떤 라우팅 프로토콜을 사용하는지에 따라 크기가 바뀌게 된다. 이는 운영체제 또한 마찬가지다.
+
+구성 파일도 올라간다. 라우터의 주소, 라우팅 프로토콜, 보안 등 구성 모드에서 만들어 줬던 라우터의 구성 파일이 램에 올라가서 실제 라우터를 움직인다.
+
+ARP 캐시니, 패스트 스위칭에 대한 캐시도 이 곳에 저장되어 있다.
+
+### NVRAM(Non Volatile RAM)
+
+램의 특성상 전원이 꺼지면 모든 정보가 지워진다. 그래서 이를 백업 해둘 다른 메모리가 필요한데, 그 중 하나가 NVRAM이다. 이 곳에 라우팅 테이블은 보관하지 않고 라우터의 구성 파일을 저장한다.
+
+### Flash 메모리
+
+IOS는 플래시 메모리에 저장된다. 라우터에 따라서 플래시 메모리를 교체하거나 확장할 수 있고, NVRAM에 비해 용량이 크다. NVRAM은 오직 구성 파일 저장용으로 사용되는 반면 플래시 메모리는 주로 IOS 이미지 파일 저장용으로 사용된다.
+
+라우터의 업그레이드 작업은 IOS를 업그레이드를 통해 이루어진다. 이 때 플래시에 새로운 IOS를 다운로드 해야 하는데, 이 때 사용 되는 프로토콜이 TFTP이다.
+
+### 롬(ROM)
+
+라우터의 가장 기본적인 내용, 라우터의 상태 점검 순서나 IOS를 가져다 메모리에 올리는 방법 등을 기억 해두는 곳이다. PC의 CMOS와 같은 역할을 한다. 또한 롬에는 기본적인 IOS가 들어가 있는데, 라우터에 문제가 생길 경우 기본 IOS를 롬에서 가져와 사용한다.
